--- a/chmc_wbms/templates/admin/includes/admin_tabbar.html
+++ b/chmc_wbms/templates/admin/includes/admin_tabbar.html
@@ -4,12 +4,20 @@
       <a  href="{% url 'admin_dashboard' %}" class="nav-link">
           Home</a>
     </li>
-    <li class="nav-item-2 {% if request.resolver_match.url_name == 'manage_accounts' %}active{% endif %}" role="presentation">
-      <a  href="{% url 'manage_accounts' %}" class="nav-link">
-          Manage Accounts</a>
+    <li class="nav-item-2 {% if request.resolver_match.url_name == 'admin_examination' %}active{% endif %}" role="presentation">
+      <a  href="{% url 'admin_examination' %}" class="nav-link">
+          Examinations</a>
     </li>
-    <li class="nav-item-3 {% if request.resolver_match.url_name == 'patients_list' %}active{% endif %}" role="presentation">
-      <a href="{% url 'patients_list' %}" class="nav-link">
+    <li class="nav-item-3 {% if request.resolver_match.url_name == 'admin_patients_list' %}active{% endif %}" role="presentation">
+      <a href="{% url 'admin_patients_list' %}" class="nav-link">
           Patients List</a>
+    </li>
+    <li class="nav-item-4 {% if request.resolver_match.url_name == 'admin_document_result' %}active{% endif %}" role="presentation">
+      <a href="{% url 'admin_document_results' %}" class="nav-link">
+          Document Results</a>
+    </li>
+    <li class="nav-item-5 {% if request.resolver_match.url_name == 'manage_accounts' %}active{% endif %}" role="presentation">
+      <a href="{% url 'manage_accounts' %}" class="nav-link">
+          Manage Accounts</a>
     </li>
   </ul>
