--- a/chmc_wbms/templates/admin/includes/pagination.html
+++ b/chmc_wbms/templates/admin/includes/pagination.html
@@ -1,23 +1,43 @@
+{% if page_obj.has_other_pages %}
 <nav aria-label="Page navigation">
-    <ul class="pagination">
-      {% if page_obj.has_previous %}
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
         <li class="page-item">
-          <a class="page-link" href="?page=1">&laquo; First</a>
+            <a class="page-link" href="?{% if base_query %}{{ base_query }}&{% endif %}page=1" aria-label="First">
+                &laquo; First
+            </a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            <a class="page-link" href="?{% if base_query %}{{ base_query }}&{% endif %}page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                Previous
+            </a>
         </li>
-      {% endif %}
-      <li class="page-item active">
-        <span class="page-link">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
-      </li>
-      {% if page_obj.has_next %}
+        {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <li class="page-item active">
+                    <span class="page-link">{{ num }}</span>
+                </li>
+            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                <li class="page-item">
+                    <a class="page-link" href="?{% if base_query %}{{ base_query }}&{% endif %}page={{ num }}">{{ num }}</a>
+                </li>
+            {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+            <a class="page-link" href="?{% if base_query %}{{ base_query }}&{% endif %}page={{ page_obj.next_page_number }}" aria-label="Next">
+                Next
+            </a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
+            <a class="page-link" href="?{% if base_query %}{{ base_query }}&{% endif %}page={{ page_obj.paginator.num_pages }}" aria-label="Last">
+                Last &raquo;
+            </a>
         </li>
-      {% endif %}
+        {% endif %}
     </ul>
-  </nav>
+</nav>
+{% endif %}
